<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/X_item_no"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/text_help_xuhao" />

    <TextView
        android:id="@+id/X_item_piece"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/text_list_piace" />
    <TextView
        android:id="@+id/X_item_kongNo"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/text_list_kong" />


    <TextView
        android:id="@+id/X_item_shellno"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/text_list_guan" />

    <TextView
        android:id="@+id/X_item_delay"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/text_list_delay" />

    <TextView
        android:id="@+id/X_item_errorname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/text_list_state" />

</LinearLayout>
