<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/X_item_no"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/textview_border"
        style="@style/alltextstyle"
        android:textSize="15sp"
        android:text="@string/text_help_xuhao" />
    <TextView
        android:id="@+id/X_item_quyu"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/textview_border"
        style="@style/alltextstyle"
        android:textSize="15sp"
        android:text="@string/text_list_piace" />
    <TextView
        android:id="@+id/X_item_duanNo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/textview_border"
        style="@style/alltextstyle"
        android:textSize="15sp"
        android:text="@string/text_list_kong" />
    <TextView
        android:id="@+id/X_item_shellno"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:background="@drawable/textview_border"
        style="@style/alltextstyle"
        android:textSize="15sp"
        android:text="@string/text_list_guan" />
    <TextView
        android:id="@+id/X_item_delay"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/textview_border"
        style="@style/alltextstyle"
        android:textSize="15sp"
        android:text="@string/text_list_delay" />

    <TextView
        android:id="@+id/X_item_errorname"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/textview_border"
        style="@style/alltextstyle"
        android:textSize="15sp"
        android:text="@string/text_list_cw" />


</LinearLayout>
