<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal">
    
    <!-- 序号 -->
    <TextView
        android:id="@+id/tv_blastserial"
        style="@style/alltextstyle"
        android:layout_width="55dp"
        android:layout_height="match_parent"
        android:background="@drawable/a_bg_border_blue_1dp"
        android:text="@string/text_dialog_xh"
        />
    
    <!-- 孔号 -->
    <TextView
        android:id="@+id/tv_sithole"
        style="@style/alltextstyle"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:background="@drawable/a_bg_border_blue_1dp"
        android:text="@string/text_list_kong"
        />

    <!-- 延时-->
    <TextView
        android:id="@+id/tv_delay"
        style="@style/alltextstyle"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:background="@drawable/a_bg_border_blue_1dp"
        android:text="@string/text_list_delay"
        />
    
    <!-- 管壳号-->
    <TextView
        android:id="@+id/tv_shellBlastNo"
        style="@style/alltextstyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/a_bg_border_blue_1dp"
        android:text="@string/text_list_guan"
        />



</LinearLayout>
