<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/denator_del_mainpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical" 
     android:focusable="true"
    android:focusableInTouchMode="true"
     android:background="#ffffff"
    tools:context="android_serialport_api.xingbang.firingdevice.SetDelayTime"
    tools:ignore="MergeRootFrame" >
	
	<Button
        android:id="@+id/btn_create_hostspot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_hostspot"/>

    <Button
        android:id="@+id/btn_close_hostspot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_hostspot"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_wifi"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_data_wifi"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/text_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <ListView
        android:id="@+id/factory_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
   </LinearLayout>