<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/child_pg_bg"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame">


    <TextView
        android:id="@+id/tv_user_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/language_select"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <Button
        android:visibility="gone"
        android:id="@+id/btn_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_mainpage_style"
        android:textColor="@color/bt_fg_base"
        android:text="@string/language_auto" />

    <Button
        android:id="@+id/btn_cn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_mainpage_style"
        android:textColor="@color/bt_fg_base"
        android:text="@string/language_cn" />

    <!--<Button-->
        <!--android:id="@+id/btn_traditional"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:text="@string/language_traditional" />-->

    <Button
        android:id="@+id/btn_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_mainpage_style"
        android:textColor="@color/bt_fg_base"
        android:text="@string/language_en" />
</LinearLayout>