<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
    <TextView
        android:background="@drawable/textview_border"
        android:id="@+id/tv_lg_uid"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="uid"
        style="@style/alltextstyle"/>
    <TextView
        android:background="@drawable/textview_border"
        android:layout_weight="1"
        android:id="@+id/tv_lg_yxq"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/text_yxq"
        style="@style/alltextstyle"/>
    <TextView
        android:background="@drawable/textview_border"
        android:layout_weight="1"
        android:id="@+id/tv_lg_gzm"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/text_gzm"
        style="@style/alltextstyle"/>
    <TextView
        android:background="@drawable/textview_border"
        android:layout_weight="2"
        android:id="@+id/tv_lg_gzmcwxx"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/text_xzsb20"
        android:gravity="center_vertical"
        style="@style/alltextstyle"/>
    </LinearLayout>
</LinearLayout>
